--- a/keymaps/ergopti/ergo_1dk_v2.1.1.toml
+++ b/keymaps/ergopti/ergo_1dk_v2.1.1.toml
@@ -1,12 +1,12 @@
-name        = "HyperTexte 1DFH"
-name8       = "hypertexte_1dk_v2"
+name        = "Ergopti"
+name8       = "ergo_1dk"
 locale      = "fr"
 variant     = "1DK"
-description = "Disposition HyperTexte, pour une saisie plus rapide de texte."
 author      = "Adrien MOYAUX"
-url         = "https://hypertexte.beseven.fr"
+description = "Disposition ergonomique optimisée pour le français, l’anglais et le code"
+url         = "https://ergopti.fr"
 geometry    = "ERGO"
-version     = "1.2.0"
+version     = "2.1.1"
 
 base = '''
 ╭╌╌╌╌╌┰─────┬─────┬─────┬─────┬─────┰─────┬─────┬─────┬─────┬─────┰╌╌╌╌╌┬╌╌╌╌╌╮
@@ -14,13 +14,13 @@ base = '''
 ┆ =   ┃     │     │     │     │     ┃     │     │     │     │ 0 ° ┃ €   ┆ %   ┆
 ╰╌╌╌╌╌╂─────┼─────┼─────┼─────┼─────╂─────┼─────┼─────┼─────┼─────╂╌╌╌╌╌┼╌╌╌╌╌┤
 ·     ┃ Z   │ Y   │ O   │ W   │ B   ┃ F   │ G   │ H   │ C   │ X   ┃ {   ┆ }   ┆
-·     ┃   á │   í │   ó │     │     ┃     │     │   û │   ç │     ┃ [   ┆ ]   ┆
+·     ┃   á │   í │     │     │     ┃     │     │   û │   ç │   â ┃ [   ┆ ]   ┆
 ·     ┠─────┼─────┼─────┼─────┼─────╂─────┼─────┼─────┼─────┼─────╂╌╌╌╌╌┼╌╌╌╌╌┤
 ·     ┃ A   │ I   │ E   │ U   │ K   ┃ V   │ S   │ N   │ T   │ R   ┃ "   ┆ |   ┆
-·     ┃   è │   é │   œ │     │     ┃   ñ │     │   î │     │   ù ┃ '   ┆ \   ┆
+·     ┃   è │   é │   œ │     │     ┃     │   q │   ô │     │     ┃ '   ┆ \   ┆
 ╭╌╌╌╌╌╂─────┼─────┼─────┼─────┼─────╂─────┼─────┼─────┼─────┼─────╂╌╌╌╌╌┴╌╌╌╌╌╯
 ┆ Ê   ┃ :   │ J   │ À   │*¨   │ ;   ┃ M   │ D   │ L   │ P   │ ?   ┃           ·
-┆   ^ ┃ . ê │   æ │   ô │***¨ │ ,   ┃     │     │   â │   q │ ’ ? ┃           ·
+┆   ^ ┃ . ù │   æ │   ê │***¨ │ ,   ┃   ñ │     │   î │     │ ’ ? ┃           ·
 ╰╌╌╌╌╌┸─────┴─────┴─────┴─────┴─────┸─────┴─────┴─────┴─────┴─────┚ · · · · · ·
 '''
 
@@ -29,14 +29,14 @@ altgr = '''
 ┆     ┃   ¹ │   ² │   ³ │   ⁴ │   ⁵ ┃   ⁶ │   ⁷ │   ⁸ │   ⁹ │   ⁰ ┃     ┆     ┆
 ┆     ┃   ₁ │   ₂ │   ₃ │   ₄ │   ₅ ┃   ₆ │   ₇ │   ₈ │   ₉ │   ₀ ┃     ┆     ┆
 ╰╌╌╌╌╌╂─────┼─────┼─────┼─────┼─────╂─────┼─────┼─────┼─────┼─────╂╌╌╌╌╌┼╌╌╌╌╌┤
-·     ┃   „ │   „ │     │     │   “ ┃   ” │   ≈ │   £ │   € │   × ┃     ┆     ┆
-·     ┃   ` │   @ │   \ │   ^ │   « ┃   » │   ~ │   # │   / │   * ┃     ┆     ┆
+·     ┃   „ │   „ │     │     │   “ ┃   ” │   € │   £ │   ≈ │   × ┃     ┆     ┆
+·     ┃   ` │   @ │   % │   ! │   « ┃   » │   ^ │   # │   ~ │   * ┃     ┆     ┆
 ·     ┠─────┼─────┼─────┼─────┼─────╂─────┼─────┼─────┼─────┼─────╂╌╌╌╌╌┼╌╌╌╌╌┤
 ·     ┃   ≤ │   ≥ │     │     │     ┃   ¦ │   — │   – │     │     ┃     ┆     ┆
-·     ┃   < │   > │   { │   } │   ! ┃   | │   ( │   ) │   [ │   ] ┃     ┆     ┆
+·     ┃   < │   > │   { │   } │   \ ┃   | │   ( │   ) │   [ │   ] ┃     ┆     ┆
 ╭╌╌╌╌╌╂─────┼─────┼─────┼─────┼─────╂─────┼─────┼─────┼─────┼─────╂╌╌╌╌╌┴╌╌╌╌╌╯
 ┆     ┃   … │     │     │     │   · ┃   − │   § │   ≠ │   ± │   ¿ ┃           ·
-┆     ┃   : │   % │   = │   " │   ; ┃   & │   $ │   = │   + │   ' ┃           ·
+┆     ┃   : │   / │   = │   " │   ; ┃   & │   $ │   = │   + │   ' ┃           ·
 ╰╌╌╌╌╌┸─────┴─────┴─────┴─────┴─────┸─────┴─────┴─────┴─────┴─────┚ · · · · · ·
 '''
 
